[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scripts/Room4.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Sprites/Room4/1.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Sprites/Room4/3.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Sprites/Room4/4.png" type="Texture" id=4]
[ext_resource path="res://Audios/ButtonPress.ogg" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": false,
"name": "Not Pressed",
"speed": 0.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": false,
"name": "Pressed",
"speed": 0.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 314.876, 10 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 37.8274, 14.028 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 7.01401, 33.03 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 20.4553, 46.78 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 16.0581, 14.028 )

[sub_resource type="Animation" id=8]
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="Node2D" type="Node2D"]
position = Vector2( 684, 325 )
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="FallRoomSpr1" type="Sprite" parent="Area2D/CollisionShape2D"]
position = Vector2( -521, -145 )
texture = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Area2D/CollisionShape2D"]
position = Vector2( -421, -124 )
frames = SubResource( 2 )
animation = "Not Pressed"

[node name="AnimatedSprite2" type="AnimatedSprite" parent="Area2D/CollisionShape2D"]
position = Vector2( -421, -44 )
frames = SubResource( 2 )
animation = "Not Pressed"

[node name="Area2D2" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( -513.349, 86.3606 )
shape = SubResource( 3 )

[node name="Area2D3" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D3"]
position = Vector2( -560.827, -258.203 )
shape = SubResource( 4 )

[node name="Area2D4" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D4"]
position = Vector2( -422.014, -245.97 )
shape = SubResource( 5 )

[node name="Area2D5" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D5"]
position = Vector2( -660.764, -258.22 )
shape = SubResource( 6 )

[node name="Button1Collider" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Button1Collider"]
position = Vector2( -420.933, -124.035 )
shape = SubResource( 7 )

[node name="Button2Collider" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Button2Collider"]
position = Vector2( -420.933, -44.0296 )
shape = SubResource( 7 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2( -512.682, -143.985 )
polygon = PoolVector2Array( -86.318, -90.015, -94.318, -81.015, -208.318, -81.015, -208.318, -47.015, -214.318, -41.015, -246.318, -41.015, -246.318, 117.985, -209.318, 155.985, -167.318, 155.985, -129.318, 195.985, -46.318, 195.985, -46.318, 239.985, -320, 240, -320, -240, -86.318, -239.015 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2( -513, -144 )
polygon = PoolVector2Array( 320, 240, 30, 240, 30.1, 196, 153.2, 196, 230, 120, 230, -1.00002, 198, -1.00002, 192, -7.00002, 192, -41, 158, -41, 152, -47, 152, -81, -2, -81, -10, -89, -10, -240, 320, -240 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -14.0
margin_top = -12.0
margin_right = 970.0
margin_bottom = 552.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/ColorRect"]
anims/FadeOut = SubResource( 8 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[connection signal="animation_finished" from="CanvasLayer/ColorRect/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
